--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,3 +3,16 @@
 @tailwind utilities;
 
 
+.navLinkActive::after{
+    content: '';
+    width: 0%;
+    height: 3px;
+    background: rgb(91, 40, 173);
+    display: block;
+}
+
+.navLinkActive:hover::after{
+    width: 100%;
+    transition: all 0.3s ease;
+    box-sizing: border-box;
+}
