--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,11 @@
 
 /* navigation circle animation */
 
-.navLinkActive{
-    color: white;
+.underlinedRuler::after{
+    content: ""; 
+    width: 100%;
+    height: 1px; 
+    background: rgba(194, 194, 194, 0.13);
+    display: block;
 }
 
