Reconfigured index.tsx

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -48,11 +48,16 @@
   top: 0;
   left: 0;
   pointer-events: none;
-  background-image:
-      linear-gradient(to right, rgb(203 213 225) 1px, transparent 1px),
-      linear-gradient(to bottom, rgba(203, 213, 225) 1px, transparent 1px);
+  background-image: linear-gradient(
+      to right,
+      rgb(203 213 225) 1px,
+      transparent 1px
+    ),
+    linear-gradient(to bottom, rgba(203, 213, 225) 1px, transparent 1px);
   background-size: 2.5rem 2.5rem;
   background-position: center center;
   opacity: 0.3;
   z-index: -1;
 }
+
+
